# scp_terminal

./: Cargo.toml  README.md
.github/workflows/: rust.yml  telegram.yml
src/: main.rs
