[package]
name = "scp_terminal"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
crossterm  = "0.20.0"
anyhow = "1.0.41"
termimad = "0.14.0"
ego-tree = "0.6.2"
itertools = "0.10.1"
structopt = "0.3.22"
